--- a/pom.xml
+++ b/pom.xml
@@ -10,11 +10,15 @@
     <packaging>jar</packaging>
 
     <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
         <spark.core.version>2.2.0</spark.core.version>
         <spark.sql.version>2.2.0</spark.sql.version>
         <spark.streaming.version>2.2.0</spark.streaming.version>
         <scala.langage.version>2.11.8</scala.langage.version>
+        <scala.compiler.version>2.15.2</scala.compiler.version>
         <spark.streaming.kafka.version>2.2.0</spark.streaming.kafka.version>
+        <spark.hive.version>2.2.0</spark.hive.version>
         <log4j.version>2.13.3</log4j.version>
         <junit.version>4.12</junit.version>
         <scalatest.version>3.1.1</scalatest.version>
@@ -23,6 +27,13 @@
         <twitter.hbc.client.version>2.2.0</twitter.hbc.client.version>
         <twitter4j.version>4.0.4</twitter4j.version>
         <spark.streaming.twitter.version>1.6.2</spark.streaming.twitter.version>
+        <mysql.jdbc.driver.version>8.0.12</mysql.jdbc.driver.version>
+        <postgre.jdbc.driver.version>42.2.18</postgre.jdbc.driver.version>
+        <microsoft.sqlserver.jdbc.driver.version>6.4.0.jre8</microsoft.sqlserver.jdbc.driver.version>
+        <hbase.client.version>2.2.6</hbase.client.version>
+        <hbase.spark.connector.version>1.0.0</hbase.spark.connector.version>
+        <hortonworks.hbase.version>1.1.1-2.1-s_2.11</hortonworks.hbase.version>
+        <cassandra.spark.connector.version>2.4.1</cassandra.spark.connector.version>
     </properties>
 
     <dependencies>
@@ -43,7 +54,7 @@
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-streaming_2.11</artifactId>
             <version>${spark.streaming.version}</version>
-            <scope>remote</scope>
+            <scope>compile</scope>
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.scala-lang/scala-library -->
         <dependency>
@@ -120,10 +131,69 @@
             <artifactId>spark-streaming-twitter_2.11</artifactId>
             <version>${spark.streaming.twitter.version}</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.spark/spark-hive -->
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-hive_2.11</artifactId>
+            <version>${spark.hive.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>${mysql.jdbc.driver.version}</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>${postgre.jdbc.driver.version}</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/com.microsoft.sqlserver/mssql-jdbc -->
+        <dependency>
+            <groupId>com.microsoft.sqlserver</groupId>
+            <artifactId>mssql-jdbc</artifactId>
+            <version>${microsoft.sqlserver.jdbc.driver.version}</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.hbase/hbase-client -->
+        <dependency>
+            <groupId>org.apache.hbase</groupId>
+            <artifactId>hbase-client</artifactId>
+            <version>${hbase.client.version}</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.hbase.connectors.spark/hbase-spark -->
+        <dependency>
+            <groupId>org.apache.hbase.connectors.spark</groupId>
+            <artifactId>hbase-spark</artifactId>
+            <version>${hbase.spark.connector.version}</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/com.datastax.spark/spark-cassandra-connector -->
+        <dependency>
+            <groupId>com.datastax.spark</groupId>
+            <artifactId>spark-cassandra-connector_2.11</artifactId>
+            <version>${cassandra.spark.connector.version}</version>
+        </dependency>
+
+        <!-- shc-core hortonwork hbase connector for Spark -->
+        <dependency>
+            <groupId>com.hortonworks</groupId>
+            <artifactId>shc-core</artifactId>
+            <version>${hortonworks.hbase.version}</version>
+        </dependency>
 
     </dependencies>
 
+
+    <repositories>
+        <repository>
+            <id>hdp-repo</id>
+            <url>https://repo.hortonworks.com/content/repositories/releases/</url>
+        </repository>
+    </repositories>
+
     <build>
+
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -140,7 +210,39 @@
                 <artifactId>maven-scala-plugin</artifactId>
                 <version>2.11</version>
             </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>2.4</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                            <mainClass>SparkBigData</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.scala-tools</groupId>
+                <artifactId>maven-scala-plugin</artifactId>
+                <version>${scala.compiler.version}</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>compile</goal>
+                            <goal>testCompile</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <scalaVersion>${scala.langage.version}</scalaVersion>
+                </configuration>
+            </plugin>
         </plugins>
+
     </build>
 
 </project>
