--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
         <hbase.spark.connector.version>1.0.0</hbase.spark.connector.version>
         <hortonworks.hbase.version>1.1.1-2.1-s_2.11</hortonworks.hbase.version>
         <cassandra.spark.connector.version>2.4.1</cassandra.spark.connector.version>
+        <jackson.databind.version>2.11.3</jackson.databind.version>
     </properties>
 
     <dependencies>
@@ -180,6 +181,13 @@
             <groupId>com.hortonworks</groupId>
             <artifactId>shc-core</artifactId>
             <version>${hortonworks.hbase.version}</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson.databind.version}</version>
         </dependency>
 
     </dependencies>
