--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
         <spark.streaming.version>2.2.0</spark.streaming.version>
         <scala.langage.version>2.11.8</scala.langage.version>
         <scala.compiler.version>2.15.2</scala.compiler.version>
-        <spark.streaming.kafka.version>2.2.0</spark.streaming.kafka.version>
+        <spark.streaming.kafka.version>2.3.0</spark.streaming.kafka.version>
         <spark.hive.version>2.2.0</spark.hive.version>
         <log4j.version>2.13.3</log4j.version>
         <junit.version>4.12</junit.version>
@@ -34,7 +34,7 @@
         <hbase.spark.connector.version>1.0.0</hbase.spark.connector.version>
         <hortonworks.hbase.version>1.1.1-2.1-s_2.11</hortonworks.hbase.version>
         <cassandra.spark.connector.version>2.4.1</cassandra.spark.connector.version>
-        <jackson.databind.version>2.11.3</jackson.databind.version>
+        <jackson.databind.version>2.6.7.3</jackson.databind.version>
     </properties>
 
     <dependencies>
@@ -221,16 +221,27 @@
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <version>2.4</version>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>3.3.0</version>
                 <configuration>
                     <archive>
                         <manifest>
                             <addClasspath>true</addClasspath>
-                            <mainClass>SparkBigData</mainClass>
+                            <mainClass>ConsumerKafkaSpark_Prod</mainClass>
                         </manifest>
                     </archive>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
                 </configuration>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
 
             <plugin>
